# pygmail

./: DOCUMENTATION.md  README.md
backend/: backend.py  export.csv  requirements.txt
examples/: authenticate.py  export_emails.py  get_attachment.py  me.py  read_all_emails.py  read_email.py  send_email.py
pygmail/: LICENSE  README.md  setup.cfg
pygmail/pygmail/: __init__.py  client.py
