[metadata]
name = py-gmail
version = 0.1.2
author = Utkrishth Anand
author_email = utkrishth@utkrishth.in
description = Python client for sending gmails fast and easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/utkrstht/pygmail
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Communications :: Email
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.entry_points]
console_scripts =
    pygmail = pygmail.client:main
